[package]
name = "rc"
version = "0.1.0"
edition = "2021"
authors = ["N R Shyamsundar Iyanger <nrshyamsundariyanger@protonmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = {version = "1.0.117", features=["derive"]}
prettytable-rs = "^0.8"
chrono = "0.4.0"
clap = {version = "3.0.14", features = ["derive"]}
